--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 /.DS_Store
+/LOLzwagon.xcodeproj/project.xcworkspace/xcuserdata/derekselander.xcuserdatad/UserInterfaceState.xcuserstate
+/LOLzwagon.xcodeproj/xcuserdata/derekselander.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
