Fixed stuff, make pretty, much wow

--- a/LOLzwagon.xcodeproj/xcshareddata/xcschemes/CodeCoverage.xcscheme
+++ b/LOLzwagon.xcodeproj/xcshareddata/xcschemes/CodeCoverage.xcscheme
@@ -92,6 +92,13 @@
             ReferencedContainer = "container:LOLzwagon.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "DYLD_INSERT_LIBRARIES"
+            value = "/usr/local/lib/libLOLzwagon.dylib"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
