--- a/LOLzwagon.xcodeproj/xcshareddata/xcschemes/CodeCoverage.xcscheme
+++ b/LOLzwagon.xcodeproj/xcshareddata/xcschemes/CodeCoverage.xcscheme
@@ -100,6 +100,16 @@
          </EnvironmentVariable>
       </EnvironmentVariables>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocStackLogging"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
+         <AdditionalOption
+            key = "PrefersMallocStackLoggingLite"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
